--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                  <img class="estudante-icone" src="instagram.png" alt="icone instagram">
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="IMG_7431.jpg" alt="foto do Diogo">
+            <img class="estudante-imagem" src="IMG_7431 (2).jpg" alt="foto do Diogo">
                         <h3 class="estudante-nome">Diogo</h3>
                         <img class="estudante-icone" src="github (1).png" alt="icone github">
                         <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
                         <img class="estudante-icone" src="instagram.png" alt="icone instagram">
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Screenshot_2023-08-15-13-48-48-876_com.miui.gallery (1).jpg" alt="foto do carlos">
+            <img class="estudante-imagem" src="Screenshot_2023-08-15-13-48-48-876_com.miui.gallery (1) (1).jpg" alt="foto do carlos">
                         <h3 class="estudante-nome">carlos</h3>
                         <img class="estudante-icone" src="github (1).png" alt="icone github">
                         <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
