site-escola FINALIZADO

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabeçalho"> 
-        <img class="cabeçalho-imagem" src="alurastart logo 1 (1).png" alt="" srcset="">
+        <img class="cabeçalho-imagem" src="alura.png" alt="" srcset="">
         <ul class="cabeçalho-lista">
             <li class="cabeçalho-lista-item">escola</li>
             <li class="cabeçalho-lista-item">estudante</li>
@@ -21,14 +21,16 @@
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">sobre a escola</h2>
-            <p class="escola-texto-1">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação. 
+            <p class="escola-texto-1">O Colégio Rural Estadual De Pinhalzinho foi fundado em 2012 com o objetivo de promover a inclusão social de jovens e trabalhadores do campo por meio da ampliação da Rede Federal de Educação. É fundamental que a educação destinada ao meio rural não seja um distanciamento do campo, mas sim uma forma de aproximação.                 
             </p>
-            <p class="escola-texto-2">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
+            <p class="escola-texto-2">A turma da segunda série A , em especial é uma turma muito divertida, unida, popular e as vezes brincalhões demais. Porém são uma turma de alunos brilhantes.
+
+            </p>
 
 
         </div>
 
-<img class="escola-imagem" src="Formula-amico 1.png" alt="">
+<img class="escola-imagem" src="Formula-amico 1 (2).png" alt="">
 
 
     </section>
@@ -37,93 +39,94 @@
         <div class="estudante-todos"></div>
         <div class="estudante-todos">
          <div class="estudante-div">
-        <img class="estudante-imagem" src="IMG_1467.jpeg" alt="foto da carla">
+        <img class="estudante-imagem" src="unnamed (12).jpg" alt="foto da carla">
         <h3 class="estudante-nome">carla</h3>
-                 <img class="estudante-icone" src="github (1).png" alt="icone github">
-                 <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                 <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+                 <a href="https://github.com/CARLALINDAA/site-escola/upload/main"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+                 <a href="www.linkedin.com/in/carla-seduk-8118b329b/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+                 <a href="https://www.instagram.com/carlaaseduk/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="IMG_7431 (2).jpg" alt="foto do Diogo">
+            <img class="estudante-imagem" src="Diogo.jpg" alt="foto do Diogo">
                         <h3 class="estudante-nome">Diogo</h3>
-                        <img class="estudante-icone" src="github (1).png" alt="icone github">
-                        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+                        <a href="https://github.com/DIOGOPINDUCA/SITE_ESCOLA"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+                        <a href="https://www.linkedin.com/in/diogo-dal-castel-3398b529b/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+                        <a href="https://www.instagram.com/diogohenriquedc/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Screenshot_2023-08-15-13-48-48-876_com.miui.gallery (1) (1).jpg" alt="foto do carlos">
+            <img class="estudante-imagem" src="Carlos.jpg" alt="foto do carlos">
                         <h3 class="estudante-nome">carlos</h3>
-                        <img class="estudante-icone" src="github (1).png" alt="icone github">
-                        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+                        <a href="https://github.com/carloseduardo2022/site-escola"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+                        <a href="https://www.linkedin.com/uas/login-submit"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+                        <a href="https://www.instagram.com/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="0b25cc56-5e82-4752-a95a-b866262eb726.jpeg" alt="foto do gustavo">
+            <img class="estudante-imagem" src="gustavo.jpeg" alt="foto do gustavo">
                         <h3 class="estudante-nome">gustavo</h3>
-                        <img class="estudante-icone" src="github (1).png" alt="icone github">
-                        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+                        <a href="https://github.com/artigo157/site-escola"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+                        <a href="linkedin.com/in/gustavo-nascimento-3998ba29b"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+                        <a href="http://instagram.com/gust4voo_nascimento"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="gabriel t.webp"alt="foto do gabriel";=>
+            <img class="estudante-imagem" src="Gabriel.t.webp"alt="foto do gabriel";=>
                         <h3 class="estudante-nome">gabriel</h3>
-                        <img class="estudante-icone" src="github (1).png" alt="icone github">
-                        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+                        <a href="https://github.com/bolimbolacha"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+                        <a href="https://www.linkedin.com/in/gabriel-perius-taborda-244675233/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+                        <a href="https://www.instagram.com/alm_gabe_/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="IMG_0826.jpeg"alt="foto do joão";=>
+            <img class="estudante-imagem" src="joão.jpeg"alt="foto do joão";=>
                         <h3 class="estudante-nome">joão</h3>
-                        <img class="estudante-icone" src="github (1).png" alt="icone github">
-                        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+                        <a href="https://github.com/joaopedrosangaletti/site-da-turma"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+                        <a href="linkedin.com/in/joao-pedro-sangaletti-goncalves-860ba62a1"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+                        <a href="https://www.instagram.com/joaopedrosangaletti"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="1693932898682.jpg"alt="foto do everton";=>
+            <img class="estudante-imagem" src="Everton244.jpg"alt="foto do everton";=>
                         <h3 class="estudante-nome">everton</h3>
-                        <img class="estudante-icone" src="github (1).png" alt="icone github">
-                        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+                       <a href="https://github.com/tatuamarrado66987/site-escola"> <img class="estudante-icone" src="github.png" alt="icone github"></a>
+                        <a href="https://br.linkedin.com/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+                       <a href="https://www.instagram.com/everton_volff_244"> <img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
     </div>
     <div class="estudante-div">
-        <img class="estudante-imagem" src="IMG-20230921-WA0247.jpg"alt="foto da emmely";=>
+        <img class="estudante-imagem" src="emili.jpg"alt="foto da emmely";=>
                     <h3 class="estudante-nome">emmely</h3>
-                    <img class="estudante-icone" src="github (1).png" alt="icone github">
-                    <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+                    <a href="https://github.com/emmelykovalski/SITE-ESCOLA
+                    "><img class="estudante-icone" src="github.png" alt="icone github"></a>
+                    <a href="https://www.linkedin.com/in/emmely-kovalski-schmitt-5a090029b/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+                    <a href="https://www.instagram.com/emmelykovalski/"></a><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
 </div>
 <div class="estudante-div">
-    <img class="estudante-imagem" src="DSC_9162 (1).jpg"alt="foto da erica";=>
+    <img class="estudante-imagem" src="Erica.jpg"alt="foto da erica";=>
                 <h3 class="estudante-nome">erica</h3>
-                <img class="estudante-icone" src="github (1).png" alt="icone github">
-                <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+                <a href="https://github.com/ericaapareci/SITE-ESCOLA"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+                <a href="https://www.linkedin.com/in/erica-aparecida-wolff-78690229b/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+                <a href="http://www.instagran.com/erica.wolff_"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
 </div>
 <div class="estudante-div">
-    <img class="estudante-imagem" src="Screenshot_20230826-204257.jpg"alt="foto do robson";=>
+    <img class="estudante-imagem" src="Bill.jpg"alt="foto do robson";=>
                 <h3 class="estudante-nome">robson</h3>
-                <img class="estudante-icone" src="github (1).png" alt="icone github">
-                <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+                <a href="https://github.com/porcoassadojjnp123"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+                <a href="https://www.linkedin.com/in/robson-klein-silva-3b20712a1/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/bil_klein_/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
 </div>
 <div class="estudante-div">
-    <img class="estudante-imagem" src="bort.jpg"alt="foto do gabriel B.";=>
+    <img class="estudante-imagem" src="bort (1).jpg"alt="foto do gabriel B.";=>
                 <h3 class="estudante-nome">foto do gabriel B.</h3>
-                <img class="estudante-icone" src="github (1).png" alt="icone github">
+                <img class="estudante-icone" src="github.png" alt="icone github">
                 <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
                 <img class="estudante-icone" src="instagram.png" alt="icone instagram">
 </div>
 <div class="estudante-div">
-    <img class="estudante-imagem" src="FB_IMG_1696350608489.jpg"alt="luana.";=>
+    <img class="estudante-imagem" src="Luana.jpg"alt="luana.";=>
                 <h3 class="estudante-nome">luana</h3>
-                <img class="estudante-icone" src="github (1).png" alt="icone github">
+                <img class="estudante-icone" src="github.png" alt="icone github">
                 <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
                 <img class="estudante-icone" src="instagram.png" alt="icone instagram">
 </div>
      
 </section>
 <footer class="rodapé">
-    <img class="rodapé-imagem"src="alurastart logo 1 (1).png" alt="logo da alura start">
+    <img class="rodapé-imagem"src="alura.png" alt="logo da alura start">
 </footer>
 
 </body>
